source/blender/editors/screen/screen_edit.c
@@ -835,36 +835,6 @@ void ED_screen_refresh(wmWindowManager *wm, wmWindow *win)
 	screen->context = ed_screen_context;
 }
 
-static bool screen_regions_need_size_refresh(
-        const wmWindow *win, const bScreen *screen)
-{
-	ED_screen_areas_iter(win, screen, area) {
-		if (area->flag & AREA_FLAG_REGION_SIZE_UPDATE) {
-			return true;
-		}
-	}
-
-	return false;
-}
-
-static void screen_refresh_region_sizes_only(
-        wmWindowManager *wm, wmWindow *win,
-        bScreen *screen)
-{
-	const int window_size_x = WM_window_pixels_x(win);
-	const int window_size_y = WM_window_pixels_y(win);
-	const int screen_size_x = WM_window_screen_pixels_x(win);
-	const int screen_size_y = WM_window_screen_pixels_y(win);
-
-	screen_vertices_scale(win, screen, window_size_x, window_size_y, screen_size_x, screen_size_y);
-
-	ED_screen_areas_iter(win, screen, area) {
-		screen_area_update_region_sizes(wm, win, area);
-		/* XXX hack to force drawing */
-		ED_area_tag_redraw(area);
-	}
-}
-
 /* file read, set all screens, ... */
 void ED_screens_initialize(wmWindowManager *wm)
 {
@@ -886,9 +856,6 @@ void ED_screen_ensure_updated(wmWindowManager *wm, wmWindow *win, bScreen *scree
 {
 	if (screen->do_refresh) {
 		ED_screen_refresh(wm, win);
-	}
-	else if (screen_regions_need_size_refresh(win, screen)) {
-		screen_refresh_region_sizes_only(wm, win, screen);
 	}
 }
 
